updated color scheme to prevent eyebleed

--- a/static/style/classes.css
+++ b/static/style/classes.css
@@ -36,7 +36,7 @@
 
 .in-place:hover {
     padding: 0 2px;
-    border: 2px dashed #2c3e50;
+    border: 2px dashed #4f5d75;
 }
 
 pre.proto-in-place,
@@ -52,7 +52,7 @@ pre.in-place {
 }
 
 @keyframes flasher {  
-    0% { background: #2c3e50; }
+    0% { background: #4f5d75; }
     50% { opacity: 0.0; }
     100% {
         background: auto;
@@ -97,8 +97,8 @@ pre.in-place {
 }
 
 .pure-button {
-    color: #2c3e50;
-    background-color: #c2c3bb;
+    color: #2d3142;
+    background-color: #bfc0c0;
 }
 
 .pure-button-warning {
