--- a/static/style/layout.css
+++ b/static/style/layout.css
@@ -14,7 +14,7 @@
 /* TOP BAR */
 
 #top-bar {
-    background: #2c3e50;
+    background: #4f5d75;
     height: 48px;
     color: #ffffff;
 }
@@ -71,7 +71,7 @@
 }
 
 #top-bar .pure-menu-link:hover {
-    color: #2c3e50;
+    color: #4f5d75;
 }
 
 #top-bar .pure-menu ul.pure-menu-list .pure-menu-item {
@@ -81,7 +81,7 @@
 #top-bar .pure-menu-horizontal .pure-menu-children {
     width: auto;
     min-width: 100%;
-    background: #2c3e50;
+    background: #4f5d75;
 }
 
 #top-bar .pure-menu-children {
@@ -111,7 +111,7 @@
 #top-bar .search i {
     position: absolute;
     left: 5px;
-    color: #2c3e50;
+    color: #2d3142;
     line-height: 48px;
 }
 
@@ -124,7 +124,7 @@
     border: 2px solid #ffffff;
     border-radius: 14px;
     background: #ffffff;
-    color: #2c3e50;
+    color: #2d3142;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -135,7 +135,7 @@
 /* FOOTER */
 
 #footer {
-    background: #2c3e50;
+    background: #4f5d75;
     padding: 1em;
     color: #ffffff;
     margin-top: 3em;
@@ -162,14 +162,14 @@
 
 .customalert {
     padding: 5px;
-    background: #2c3e50;
+    background: #4f5d75;
     width: auto;
     min-width: 500px;
 }
 
 .customalert .header {
     font-size: 1em;
-    background: #2c3e50;
+    background: #4f5d75;
     color: #ffffff;
     padding: 5px 0 8px 0;
     font-weight: bold;
@@ -191,7 +191,7 @@
 }
 
 #customAlert {
-    background: #2c3e50;
+    background: #4f5d75;
 }
 
 /* LOADING */
